--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,6 @@ django-cleanup==9.0.0
 django-redis==5.4.0
 Pillow==11.1.0
 dj-database-url==2.1.0
-psycopg2-binary==2.9.9
+psycopg==3.1.18
 openpyxl>=3.1.2
 
